--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&display=swap');
+
 @import "null-style.scss";
 
 body {
-    font-family: Tahoma, sans-serif;
+    font-family: 'League Spartan', sans-serif;
     background-color: rgba(0,0,0,0.4);
 }
 
@@ -47,9 +49,9 @@ main {
             display: inline-block;
             width: 45%;
             h2 {
-                font-size: 34px;
+                font-size: 40px;
                 font-weight: 700;
-                line-height: 140%;
+                line-height: 120%;
                 color: #F74843;
                 margin-bottom: 20px;
                 transition: 0.2s linear;
@@ -91,12 +93,12 @@ main {
         margin: 50px 0 0 0;
         & li {
             font-weight: bold;
-            font-size: 66px;
+            font-size: 72px;
             line-height: 100%;
             color: #F74843;
             letter-spacing: 1px;
             transition: 0.2s linear;
-            margin-top: 40px;
+            margin-top: 35px;
             &:hover {
                 color: #ffffff;
                 cursor: pointer;
