--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,14 @@ html, body {
   -webkit-text-size-adjust: 100%;
 }
 
+details summary::-webkit-details-marker {
+  display: none;
+}
+
+details > summary {
+  list-style: none;
+}
+
 input, button, textarea {
   font-family: inherit;
 }
@@ -73,6 +81,51 @@ h1, h2, h3, h4, h5, h6 {
 body {
   font-family: "League Spartan", sans-serif;
   background-color: rgba(0, 0, 0, 0.4);
+}
+
+details summary {
+  max-width: 1200px;
+  margin: 35px auto 0 auto;
+  padding: 0 0 0 25px;
+  font-weight: bold;
+  font-size: 72px;
+  line-height: 100%;
+  color: #F74843;
+  letter-spacing: 1px;
+  transition: 0.2s linear;
+}
+details summary:hover {
+  color: #ffffff;
+  cursor: pointer;
+}
+details .content {
+  height: 330px;
+  margin: 10px 0 60px 0;
+  background-color: #ffffff;
+  color: #000000;
+}
+details .content .d1 {
+  max-width: 1200px;
+  height: 100%;
+  margin: 0 auto;
+  padding: 40px 0 0 20px;
+}
+details .content .d1 div {
+  display: inline-block;
+  width: 300px;
+  margin: 50px 6% 0 0;
+  font-size: 24px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  transition: 0.2s linear;
+}
+details .content .d1 div:hover {
+  cursor: pointer;
+  opacity: 70%;
+}
+
+details[open] > summary {
+  color: #ffffff;
 }
 
 video {
@@ -166,28 +219,13 @@ main .first .search input::placeholder {
   color: #ffffff;
   padding-left: 5px;
 }
-main ul {
-  margin: 50px 0 0 0;
-}
-main ul li {
-  font-weight: bold;
-  font-size: 72px;
-  line-height: 100%;
-  color: #F74843;
-  letter-spacing: 1px;
-  transition: 0.2s linear;
-  margin-top: 35px;
-}
-main ul li:hover {
-  color: #ffffff;
-  cursor: pointer;
-}
 
 footer {
+  margin: 120px 0 0 0;
   background-color: #F74843;
   height: 200px;
   text-align: center;
-  font-size: 12px;
+  font-size: 14px;
 }
 footer a {
   color: #000000;
