--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,54 @@ body {
     background-color: rgba(0,0,0,0.4);
 }
 
+details {
+    
+    summary {
+        max-width: 1200px;
+        margin: 35px auto 0 auto;
+        padding: 0 0 0 25px;
+        font-weight: bold;
+        font-size: 72px;
+        line-height: 100%;
+        color: #F74843;
+        letter-spacing: 1px;
+        transition: 0.2s linear;
+        &:hover {
+            color: #ffffff;
+            cursor: pointer;
+        }
+    }
+    .content {
+        height: 330px;
+        margin: 10px 0 60px 0;
+        background-color: #ffffff;
+        color: #000000;
+        .d1 {
+            max-width: 1200px;
+            height: 100%;
+            margin: 0 auto;
+            padding: 40px 0 0 20px;
+            div {
+                display: inline-block;
+                //border: 1px solid #000000;
+                width: 300px;
+                margin: 50px 6% 0 0;
+                font-size: 24px;
+                font-weight: 700;
+                letter-spacing: 1px;
+                transition: 0.2s linear;
+                &:hover {
+                    cursor: pointer;
+                    opacity: 70%;
+                }
+            }
+        }
+    }
+}
+details[open] > summary {
+        color: #ffffff;
+}
+
 video {
     position: fixed;
     left: 0;
@@ -89,29 +137,14 @@ main {
             }
         }
     }
-    ul {
-        margin: 50px 0 0 0;
-        & li {
-            font-weight: bold;
-            font-size: 72px;
-            line-height: 100%;
-            color: #F74843;
-            letter-spacing: 1px;
-            transition: 0.2s linear;
-            margin-top: 35px;
-            &:hover {
-                color: #ffffff;
-                cursor: pointer;
-            }
-        }
-    }
 }  
 
 footer {
+    margin: 120px 0 0 0;
     background-color: #F74843;
     height: 200px;
     text-align: center;
-    font-size: 12px;
+    font-size: 14px;
     a {
         color: #000000;
     }
