--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,17 @@ body {
   background-color: rgba(0, 0, 0, 0.4);
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100%;
+}
+
+.accordion {
+  flex: 1 1 auto;
+}
+
 details summary {
   max-width: 1200px;
   margin: 35px auto 0 auto;
