--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,17 @@ body {
     background-color: rgba(0,0,0,0.4);
 }
 
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100%;
+}
+
+.accordion {
+    flex: 1 1 auto;
+}
+
 details {
     
     summary {
